--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1 class="heading">Our Menu</h1>
         <div class="row">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="section">
                     <div class="section-title background-pink">
                         <h5>Chicken</h5>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="section">
                     <div class="section-title background-red text-white">
                         <h5>Beef</h5>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="col-lg-4 col-md-12 col-sm-12">
                 <div class="section">
                     <div class="section-title background-yellow">
                         <h5>Sushi</h5>
